# From-planning-to-Release-The-FastAPI-Developer-s-Handbook

./: README.md  pyproject.toml
alembic/: env.py
appserver/: app.py  db.py
appserver/apps/account/: deps.py  endpoints.py  exceptions.py  models.py  schemas.py  utils.py
appserver/apps/calendar/: deps.py  endpoints.py  enums.py  exceptions.py  models.py  schemas.py
appserver/libs/collections/: sort.py
appserver/libs/datetime/: calendar.py
tests/: conftest.py
tests/apps/account/: test_endpoints.py  test_login_api.py  test_logout_api.py  test_me_api.py  test_signup.py  test_signup_api.py  test_unregister_api.py  test_update_user_api.py
tests/apps/calendar/: test_booking_api.py  test_calendar.py  test_calendar_api.py  test_timeslot_api.py
tests/libs/datetime/: test_calendar.py
